# hermes1d

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  copy_common  spkg-install
cmake/: FindNumPy.cmake  FindUMFPACK.cmake
doc/: CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  conf.py  index.rst
doc/src/: intro-1.rst  intro.rst
examples/: CMake.common  CMakeLists.txt  Makefile  cmake_install.cmake
examples/chaotic_system/: CMakeLists.txt  main.cpp  run
examples/dirac/: CMakeLists.txt  hermes1d  main.cpp  plot.py  utils.py
examples/first_order_general/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  plot.py  run
examples/first_order_general_adapt/: CMakeLists.txt  Makefile  cmake_install.cmake  forms.cpp  main.cpp  plot.py  plot_error.py  run
examples/first_order_general_adapt_2/: main.cpp  run
examples/first_order_general_adapt_new/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  run
examples/homogeneous_line/: forms.cpp  main.cpp  plot.py
examples/homogeneous_line_adapt/: main.cpp  plot.py  plot_error.py  run
examples/homogenous_line/: CMakeLists.txt  main.cpp  plot.py  run
examples/homogenous_line_adapt/: CMakeLists.txt  forms.cpp  main.cpp
examples/laplace/: CMakeLists.txt  main.cpp
examples/laplace_bc_dirichlet/: Makefile  cmake_install.cmake  main.cpp  run
examples/laplace_bc_dirichlet_adapt/: CMakeLists.txt  Makefile  clean  cmake_install.cmake  forms.cpp  main.cpp  plot.py  run
examples/laplace_bc_dirichlet_adapt_2/: main.cpp
examples/laplace_bc_dirichlet_adapt_goal/: Makefile  cmake_install.cmake  forms.cpp  main.cpp
examples/laplace_bc_dirichlet_adapt_new/: Makefile  cmake_install.cmake  main.cpp  plot.py  run
examples/laplace_bc_neumann/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  run
examples/laplace_bc_newton/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  run
examples/laplace_bc_newton2/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  run
examples/neutronics/: Makefile  cmake_install.cmake  forms.cpp  main.cpp
examples/schroedinger/: CMakeLists.txt  Makefile  README  cmake_install.cmake  main.cpp  plot.py  utils.py
examples/system/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  system
examples/system_car_model/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  plot_traj.py  run
examples/system_chaotic/: Makefile  chaotic_system  cmake_install.cmake  forms.cpp  main.cpp  run  solution.gp_0  solution.gp_1  solution.gp_2  solution.gp_3
examples/system_exp/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  run
examples/system_neutronics_eigenvalue/: Makefile  cmake_install.cmake  main.cpp
examples/system_neutronics_fixedsrc/: Makefile  cmake_install.cmake  main.cpp
examples/system_neutronics_fixedsrc2/: Makefile  cmake_install.cmake  main.cpp
examples/system_pendulum/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  plot.py  run
examples/system_pendulum_adapt/: CMakeLists.txt  README  main.cpp  plot.py  run
examples/system_sin/: Makefile  cmake_install.cmake  forms.cpp  main.cpp  run
examples/system_sin_adapt/: Makefile  README  cmake_install.cmake  forms.cpp  main.cpp  run
examples/system_sin_eigen/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  plot.py  utils.py
hermes1d/: Makefile  __init__.py  cmake_install.cmake
hermes1d/fekete/: fekete.py
hermes1d/h1d_wrapper/: CMakeLists.txt  Makefile  _hermes1d.pyx  cmake_install.cmake  h1d_wrapper.pyx  hermes1d.pxd
hermes1d/h1d_wrapper/tests/: test_mesh.py
hermes1d/solvers/: eigen.py
hermes_common/: CMakeLists.txt  CTestTestfile.cmake  _hermes_common.cpp  _hermes_common.pxd  _hermes_common.pyx  _hermes_common_api_new.cpp  _hermes_common_api_new.h  convert_api.py  matrix.cpp  matrix.h  python_api.cpp  python_solvers.cpp  python_solvers.h
hermes_common/cmake/: FindPythonLibs.cmake
hermes_common/doc/: conf.py
hermes_common/sparselib/: CTestTestfile.cmake
hermes_common/tests/: CTestTestfile.cmake  test_matrices.py
hermes_common/tests/solvers/: CMakeLists.txt  CTestTestfile.cmake  main.cpp
python/: CMakeLists.txt
python/hermes1d/: CMakeLists.txt  __init__.py  _hermes1d.pxd  _hermes1d.pyx  convert_api.py
python/hermes1d/h1d_wrapper/: _hermes1d.pxd  _hermes1d.pyx
src/: CMakeLists.txt  Makefile  adapt.cpp  adapt.h  cmake_install.cmake  common.cpp  common.h  discrete.cpp  discrete.h  fekete.py  gauss_lobatto_points.py  graph.cpp  h1_polys.cpp  hermes1d.h  iterator.cpp  legendre.cpp  legendre.h  linearizer.cpp  linearizer.h  lobatto.cpp  lobatto.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  quad_std.cpp  quad_std.h  solver.h  solver_umfpack.h  transforms.cpp  transforms.h  transforms.h.chebyshev  weakform.cpp  weakform.h
src/SparseLib/: README  makefile  makefile.def
src/SparseLib/include/: comprow_double.h  diagpre_double.h  iohb.h  iohb_double.h  spblas.h  tblas1.h  tmvec.h  tmvmat.h
src/SparseLib/mv/include/: mvblas.h  mvblasc.h  mvblasd.h  mvblasf.h  mvblasi.h  mvblast.h  mvmc.h  mvmd.h  mvmf.h  mvmi.h  mvmt.h  mvmtp.h  mvv.h  mvvc.h  mvvd.h  mvvf.h  mvvi.h  mvvind.h  mvvt.h  mvvtp.h  tblas1.h  tmvmat.h
src/SparseLib/mv/src/: makefile  mvblasc.cc  mvblasd.cc  mvblasf.cc  mvblasi.cc  mvblast.cc  mvmc.cc  mvmd.cc  mvmf.cc  mvmi.cc  mvmt.cc  mvvc.cc  mvvd.cc  mvvdio.cc  mvvf.cc  mvvi.cc  mvvt.cc
src/SparseLib/spblas/: makefile  spmm.cc  spsm.cc
src/SparseLib/src/: comprow_double.cc  coord_double.cc  diagpre.cc  diagpre_double.cc  icpre.cc  icpre_double.cc  ilupre.cc  ilupre_1.5.cc  ilupre_double.cc  ilupre_double_1.5.cc  iohb.c  iohb_double.cc  iotext.c  iotext.cc  iotext_double.cc  makefile  qsort_double.cc  qsort_int.cc  qsort_type.cc
src/SparseLib/testing/: la1d8.hb  la2d8.hb  makefile  sp_test  tpre.cc  tsl.cc  tsp.cc  tspsm.cc
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/adapt-exact-quadr-H1-solver0/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
tests/adapt-exact-quadr-H1-solver1/: CMakeLists.txt  CTestTestfile.cmake  (+2 more)
(+81 files in other folders)
