enable_language(Fortran)
find_package(UMFPACK REQUIRED)
find_package(BLAS REQUIRED)

add_subdirectory(first_order_general)
add_subdirectory(laplace_bc_dirichlet)
add_subdirectory(laplace_bc_neumann)
add_subdirectory(laplace_bc_newton)
add_subdirectory(laplace_bc_newton2)
add_subdirectory(system_exp)
add_subdirectory(system_sin)
add_subdirectory(system_sin_adapt)
add_subdirectory(system_pendulum)
add_subdirectory(first_order_general_adapt)
add_subdirectory(system_pendulum_adapt)
add_subdirectory(laplace_bc_dirichlet_adapt)
add_subdirectory(system_chaotic)
add_subdirectory(system_car_model)

if(WITH_PYTHON)
    add_subdirectory(schroedinger)
endif(WITH_PYTHON)
